<resources>
    <string name="app_name">Wismata</string>
    <string name="login">Login to your Account</string>
    <string name="login2">and start explore</string>
    <string name="logintv">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="donthave">Dont have an Account?</string>
    <string name="Register">Register</string>
    <string name="Register_title">Create Your Account</string>
    <string name="Register_subtitle">Please enter your indo to create account</string>
    <string name="haveaccount">Already have an Account?</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="subTitle1">Temukan keunikan</string>
    <string name="umkm">UMKM</string>
    <string name="subTitle2">lokal di setiap destinasi</string>
    <string name="subTitle4">wisata Yogyakrta</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="main_text">Where would you like to go?</string>
    <string name="search">Search</string>
    <string name="categoriestext">Categories</string>
    <string name="welcomeText">Where would \nyou like to go?</string>
    <string name="action_save">Save</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_password_wrong">Email or password is wrong</string>
    <string name="register_success">Register successfully</string>
    <string name="register_failed">Register failed</string>
    <string name="password_not_match">Password does not match</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="invalid_name">Name must be at least 3 characters</string>
    <string name="nearest_umkm">Nearest UMKM</string>
    <string name="view_all">View All</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="detail_destination">Detail Destination</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="textview">Malioboro</string>
    <string name="rating">4.7</string>
    <string name="tvimagewisata">ImageWisata</string>
    <string name="filter">filter list</string>
    <string name="categoryBahari">Bahari</string>
    <string name="categoryBud">Budaya</string>
    <string name="categorylam">Cagar Alam</string>
    <string name="categorystore">Pusat Belanja</string>
    <string name="categoryhib">Taman</string>
    <string name="recomentext">Recomended Destination</string>

</resources>